# fastapi-uv-workspaces-template

./: .coveragerc  .dockerignore  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
app/: main.py
docker/: Dockerfile  docker-compose.yml
